--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1>提示詞生成器</h1>
 
     <div class="section">
-        <label for="theme">主題 / Theme:</label>
+        <label for="theme">主題123 / Theme:</label>
         <select id="theme">
             <option value="無 / None">無 / None</option>
             <option value="自然 / Nature">自然 / Nature</option>
