Update prompt .html

--- a/prompt .html
+++ b/prompt .html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="section">
-        <label for="style">風格 / Style:</label>
+        <label for="style">123風格 / Style:</label>
         <select id="style">
             <option value="無 / None">無 / None</option>
             <option value="迪士尼風格 / Disney Style">迪士尼風格 / Disney Style</option>
@@ -234,5 +234,18 @@
             }
         }
     </script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Second Page</title>
+</head>
+<body>
+    <h1>Welcome to the Second Page</h1>
+    <p>This is the second page. Click the link below to go back to the main page.</p>
+    <a href="index.html">Go to Main Page</a>
 </body>
 </html>
