--- a/second-page.html
+++ b/second-page.html
@@ -16,10 +16,21 @@
             display: block;
             margin-bottom: 5px;
         }
-        select {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
+        .button-group {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+        button {
+            padding: 10px 15px;
+            border: 1px solid #ccc;
+            background-color: #f0f0f0;
+            cursor: pointer;
+        }
+        button.selected {
+            background-color: #007bff;
+            color: white;
+            border-color: #007bff;
         }
         #output {
             margin-top: 20px;
@@ -32,131 +43,133 @@
     <h1>提示詞生成器</h1>
 
     <div class="section">
-        <label for="theme">主題 / Theme:</label>
-        <select id="theme">
-            <option value="無 / None">無 / None</option>
-            <option value="自然 / Nature">自然 / Nature</option>
-            <option value="科技 / Technology">科技 / Technology</option>
-            <option value="冒險 / Adventure">冒險 / Adventure</option>
-            <option value="神話 / Mythology">神話 / Mythology</option>
-            <option value="歷史 / History">歷史 / History</option>
-        </select>
+        <label>主題 / Theme:</label>
+        <div class="button-group" id="theme-group">
+            <button data-value="無 / None">無 / None</button>
+            <button data-value="自然 / Nature">自然 / Nature</button>
+            <button data-value="科技 / Technology">科技 / Technology</button>
+            <button data-value="冒險 / Adventure">冒險 / Adventure</button>
+            <button data-value="神話 / Mythology">神話 / Mythology</button>
+            <button data-value="歷史 / History">歷史 / History</button>
+        </div>
     </div>
 
     <div class="section">
-        <label for="style">123風格 / Style:</label>
-        <select id="style">
-            <option value="無 / None">無 / None</option>
-            <option value="迪士尼風格 / Disney Style">迪士尼風格 / Disney Style</option>
-            <option value="皮克斯風格 / Pixar Style">皮克斯風格 / Pixar Style</option>
-            <option value="宮崎駿/吉卜力風格 / Miyazaki/Ghibli Style">宮崎駿/吉卜力風格 / Miyazaki/Ghibli Style</option>
-            <option value="漫威動畫風格 / Marvel Animation Style">漫威動畫風格 / Marvel Animation Style</option>
-            <option value="DC動畫風格 / DC Animation Style">DC動畫風格 / DC Animation Style</option>
-        </select>
+        <label>風格 / Style:</label>
+        <div class="button-group" id="style-group">
+            <button data-value="無 / None">無 / None</button>
+            <button data-value="迪士尼風格 / Disney Style">迪士尼風格 / Disney Style</button>
+            <button data-value="皮克斯風格 / Pixar Style">皮克斯風格 / Pixar Style</button>
+            <button data-value="宮崎駿/吉卜力風格 / Miyazaki/Ghibli Style">宮崎駿/吉卜力風格 / Miyazaki/Ghibli Style</button>
+            <button data-value="漫威動畫風格 / Marvel Animation Style">漫威動畫風格 / Marvel Animation Style</button>
+            <button data-value="DC動畫風格 / DC Animation Style">DC動畫風格 / DC Animation Style</button>
+        </div>
+    </div>
+
+    <!-- 繪畫風格1 -->
+    <div class="section">
+        <label>繪畫風格 (1) / Painting Style (1):</label>
+        <div class="button-group" id="paintingStyle1-group">
+            <button data-value="無 / None">無 / None</button>
+            <button data-value="立體主義 / Cubism">立體主義 / Cubism</button>
+            <button data-value="野獸派 / Fauvism">野獸派 / Fauvism</button>
+            <button data-value="視覺欺騙法 / Trompe-l'oeil">視覺欺騙法 / Trompe-l'oeil</button>
+            <button data-value="灰調畫法 / Grisaille">灰調畫法 / Grisaille</button>
+            <button data-value="拼貼畫法 / Collage">拼貼畫法 / Collage</button>
+            <button data-value="超現實主義 / Surrealism">超現實主義 / Surrealism</button>
+            <button data-value="動態藝術 / Kinetic Art">動態藝術 / Kinetic Art</button>
+            <button data-value="照片寫實主義 / Photorealism">照片寫實主義 / Photorealism</button>
+            <button data-value="抽象表現主義 / Abstract Expressionism">抽象表現主義 / Abstract Expressionism</button>
+            <button data-value="光學藝術 / Op Art">光學藝術 / Op Art</button>
+        </div>
+    </div>
+
+    <!-- 繪畫風格2 -->
+    <div class="section">
+        <label>繪畫風格 (2) / Painting Style (2):</label>
+        <div class="button-group" id="paintingStyle2-group">
+            <button data-value="無 / None">無 / None</button>
+            <button data-value="厚塗法 / Impasto Technique">厚塗法 / Impasto Technique</button>
+            <button data-value="割鱷法 / Sgraffito">割鱷法 / Sgraffito</button>
+            <button data-value="點彩法 / Pointillism">點彩法 / Pointillism</button>
+            <button data-value="明暗對比法 / Chiaroscuro">明暗對比法 / Chiaroscuro</button>
+            <button data-value="明暗法 / Tenebrism">明暗法 / Tenebrism</button>
+            <button data-value="透明畫法 / Glazing">透明畫法 / Glazing</button>
+            <button data-value="抹除法 / Scumbling">抹除法 / Scumbling</button>
+            <button data-value="噴漆藝術 / Spray Paint Art">噴漆藝術 / Spray Paint Art</button>
+            <button data-value="熱蠟畫法 / Encaustic Painting">熱蠟畫法 / Encaustic Painting</button>
+            <button data-value="點描法 / Stippling">點描法 / Stippling</button>
+        </div>
     </div>
 
     <div class="section">
-        <label for="paintingStyle1">繪畫風格 (1) / Painting Style (1):</label>
-        <select id="paintingStyle1">
-            <option value="無 / None">無 / None</option>
-            <option value="立體主義 / Cubism">立體主義 / Cubism</option>
-            <option value="野獸派 / Fauvism">野獸派 / Fauvism</option>
-            <option value="視覺欺騙法 / Trompe-l'oeil">視覺欺騙法 / Trompe-l'oeil</option>
-            <option value="灰調畫法 / Grisaille">灰調畫法 / Grisaille</option>
-            <option value="拼貼畫法 / Collage">拼貼畫法 / Collage</option>
-            <option value="超現實主義 / Surrealism">超現實主義 / Surrealism</option>
-            <option value="動態藝術 / Kinetic Art">動態藝術 / Kinetic Art</option>
-            <option value="照片寫實主義 / Photorealism">照片寫實主義 / Photorealism</option>
-            <option value="抽象表現主義 / Abstract Expressionism">抽象表現主義 / Abstract Expressionism</option>
-            <option value="光學藝術 / Op Art">光學藝術 / Op Art</option>
-        </select>
+        <label>材質 / Texture:</label>
+        <div class="button-group" id="texture-group">
+            <button data-value="無 / None">無 / None</button>
+            <button data-value="金屬 / Metal">金屬 / Metal</button>
+            <button data-value="玻璃 / Glass">玻璃 / Glass</button>
+            <button data-value="石頭 / Stone">石頭 / Stone</button>
+            <button data-value="木材 / Wood">木材 / Wood</button>
+            <button data-value="布料 / Fabric">布料 / Fabric</button>
+            <button data-value="皮革 / Leather">皮革 / Leather</button>
+            <button data-value="水 / Water">水 / Water</button>
+            <button data-value="毛發/羽毛 / Hair/Feather">毛發/羽毛 / Hair/Feather</button>
+            <button data-value="塑膠 / Plastic">塑膠 / Plastic</button>
+            <button data-value="霧面/磨砂 / Matte/Frosted">霧面/磨砂 / Matte/Frosted</button>
+        </div>
     </div>
 
     <div class="section">
-        <label for="paintingStyle2">繪畫風格 (2) / Painting Style (2):</label>
-        <select id="paintingStyle2">
-            <option value="無 / None">無 / None</option>
-            <option value="厚塗法 / Impasto Technique">厚塗法 / Impasto Technique</option>
-            <option value="割鱷法 / Sgraffito">割鱷法 / Sgraffito</option>
-            <option value="點彩法 / Pointillism">點彩法 / Pointillism</option>
-            <option value="明暗對比法 / Chiaroscuro">明暗對比法 / Chiaroscuro</option>
-            <option value="明暗法 / Tenebrism">明暗法 / Tenebrism</option>
-            <option value="透明畫法 / Glazing">透明畫法 / Glazing</option>
-            <option value="抹除法 / Scumbling">抹除法 / Scumbling</option>
-            <option value="噴漆藝術 / Spray Paint Art">噴漆藝術 / Spray Paint Art</option>
-            <option value="熱蠟畫法 / Encaustic Painting">熱蠟畫法 / Encaustic Painting</option>
-            <option value="點描法 / Stippling">點描法 / Stippling</option>
-        </select>
+        <label>視覺角度 / Perspective:</label>
+        <div class="button-group" id="perspective-group">
+            <button data-value="無 / None">無 / None</button>
+            <button data-value="鳥瞰視角 / Bird's Eye View">鳥瞰視角 / Bird's Eye View</button>
+            <button data-value="蛙視視角 / Worm's Eye View">蛙視視角 / Worm's Eye View</button>
+            <button data-value="正面視角 / Frontal View">正面視角 / Frontal View</button>
+            <button data-value="側面視角 / Side View">側面視角 / Side View</button>
+            <button data-value="仰視視角 / Low Angle View">仰視視角 / Low Angle View</button>
+            <button data-value="俯視視角 / High Angle View">俯視視角 / High Angle View</button>
+            <button data-value="近景視角 / Close-Up View">近景視角 / Close-Up View</button>
+            <button data-value="遠景視角 / Long Shot View">遠景視角 / Long Shot View</button>
+            <button data-value="動態視角 / Motion View">動態視角 / Motion View</button>
+            <button data-value="魚眼視角 / Fisheye View">魚眼視角 / Fisheye View</button>
+        </div>
     </div>
 
     <div class="section">
-        <label for="texture">材質 / Texture:</label>
-        <select id="texture">
-            <option value="無 / None">無 / None</option>
-            <option value="金屬 / Metal">金屬 / Metal</option>
-            <option value="玻璃 / Glass">玻璃 / Glass</option>
-            <option value="石頭 / Stone">石頭 / Stone</option>
-            <option value="木材 / Wood">木材 / Wood</option>
-            <option value="布料 / Fabric">布料 / Fabric</option>
-            <option value="皮革 / Leather">皮革 / Leather</option>
-            <option value="水 / Water">水 / Water</option>
-            <option value="毛發/羽毛 / Hair/Feather">毛發/羽毛 / Hair/Feather</option>
-            <option value="塑膠 / Plastic">塑膠 / Plastic</option>
-            <option value="霧面/磨砂 / Matte/Frosted">霧面/磨砂 / Matte/Frosted</option>
-        </select>
+        <label>光線 / Lighting:</label>
+        <div class="button-group" id="lighting-group">
+            <button data-value="無 / None">無 / None</button>
+            <button data-value="自然光 / Natural Light">自然光 / Natural Light</button>
+            <button data-value="人造光 / Artificial Light">人造光 / Artificial Light</button>
+            <button data-value="柔光 / Soft Light">柔光 / Soft Light</button>
+            <button data-value="硬光 / Hard Light">硬光 / Hard Light</button>
+            <button data-value="背光 / Back Light">背光 / Back Light</button>
+        </div>
     </div>
 
     <div class="section">
-        <label for="perspective">視覺角度 / Perspective:</label>
-        <select id="perspective">
-            <option value="無 / None">無 / None</option>
-            <option value="鳥瞰視角 / Bird's Eye View">鳥瞰視角 / Bird's Eye View</option>
-            <option value="蛙視視角 / Worm's Eye View">蛙視視角 / Worm's Eye View</option>
-            <option value="正面視角 / Frontal View">正面視角 / Frontal View</option>
-            <option value="側面視角 / Side View">側面視角 / Side View</option>
-            <option value="仰視視角 / Low Angle View">仰視視角 / Low Angle View</option>
-            <option value="俯視視角 / High Angle View">俯視視角 / High Angle View</option>
-            <option value="近景視角 / Close-Up View">近景視角 / Close-Up View</option>
-            <option value="遠景視角 / Long Shot View">遠景視角 / Long Shot View</option>
-            <option value="動態視角 / Motion View">動態視角 / Motion View</option>
-            <option value="魚眼視角 / Fisheye View">魚眼視角 / Fisheye View</option>
-        </select>
+        <label>年代 / Era:</label>
+        <div class="button-group" id="era-group">
+            <button data-value="無 / None">無 / None</button>
+            <button data-value="現代 / Modern">現代 / Modern</button>
+            <button data-value="古典 / Classical">古典 / Classical</button>
+            <button data-value="未來 / Futuristic">未來 / Futuristic</button>
+            <button data-value="復古 / Retro">復古 / Retro</button>
+            <button data-value="中世紀 / Medieval">中世紀 / Medieval</button>
+        </div>
     </div>
 
     <div class="section">
-        <label for="lighting">光線 / Lighting:</label>
-        <select id="lighting">
-            <option value="無 / None">無 / None</option>
-            <option value="自然光 / Natural Light">自然光 / Natural Light</option>
-            <option value="人造光 / Artificial Light">人造光 / Artificial Light</option>
-            <option value="柔光 / Soft Light">柔光 / Soft Light</option>
-            <option value="硬光 / Hard Light">硬光 / Hard Light</option>
-            <option value="背光 / Back Light">背光 / Back Light</option>
-        </select>
-    </div>
-
-    <div class="section">
-        <label for="era">年代 / Era:</label>
-        <select id="era">
-            <option value="無 / None">無 / None</option>
-            <option value="現代 / Modern">現代 / Modern</option>
-            <option value="古典 / Classical">古典 / Classical</option>
-            <option value="未來 / Futuristic">未來 / Futuristic</option>
-            <option value="復古 / Retro">復古 / Retro</option>
-            <option value="中世紀 / Medieval">中世紀 / Medieval</option>
-        </select>
-    </div>
-
-    <div class="section">
-        <label for="character">腳色 / Character:</label>
-        <select id="character">
-            <option value="無 / None">無 / None</option>
-            <option value="英雄 / Hero">英雄 / Hero</option>
-            <option value="反派 / Villain">反派 / Villain</option>
-            <option value="探險家 / Explorer">探險家 / Explorer</option>
-            <option value="魔法師 / Wizard">魔法師 / Wizard</option>
-            <option value="機器人 / Robot">機器人 / Robot</option>
-        </select>
+        <label>腳色 / Character:</label>
+        <div class="button-group" id="character-group">
+            <button data-value="無 / None">無 / None</button>
+            <button data-value="英雄 / Hero">英雄 / Hero</button>
+            <button data-value="反派 / Villain">反派 / Villain</button>
+            <button data-value="探險家 / Explorer">探險家 / Explorer</button>
+            <button data-value="魔法師 / Wizard">魔法師 / Wizard</button>
+            <button data-value="機器人 / Robot">機器人 / Robot</button>
+        </div>
     </div>
 
     <button onclick="generatePrompt()">生成提示詞 / Generate Prompt</button>
@@ -165,15 +178,21 @@
 
     <script>
         function generatePrompt() {
-            const theme = document.getElementById('theme').value;
-            const style = document.getElementById('style').value;
-            const paintingStyle1 = document.getElementById('paintingStyle1').value;
-            const paintingStyle2 = document.getElementById('paintingStyle2').value;
-            const texture = document.getElementById('texture').value;
-            const perspective = document.getElementById('perspective').value;
-            const lighting = document.getElementById('lighting').value;
-            const era = document.getElementById('era').value;
-            const character = document.getElementById('character').value;
+            const getButtonValue = (groupId) => {
+                const group = document.getElementById(groupId);
+                const selectedButton = group.querySelector('button.selected');
+                return selectedButton ? selectedButton.getAttribute('data-value') : '無 / None';
+            };
+
+            const theme = getButtonValue('theme-group');
+            const style = getButtonValue('style-group');
+            const paintingStyle1 = getButtonValue('paintingStyle1-group');
+            const paintingStyle2 = getButtonValue('paintingStyle2-group');
+            const texture = getButtonValue('texture-group');
+            const perspective = getButtonValue('perspective-group');
+            const lighting = getButtonValue('lighting-group');
+            const era = getButtonValue('era-group');
+            const character = getButtonValue('character-group');
 
             let chinesePrompt = '';
             let englishPrompt = '';
@@ -233,19 +252,14 @@
                 `;
             }
         }
+
+        document.querySelectorAll('.button-group button').forEach(button => {
+            button.addEventListener('click', () => {
+                const group = button.parentElement;
+                group.querySelectorAll('button').forEach(btn => btn.classList.remove('selected'));
+                button.classList.add('selected');
+            });
+        });
     </script>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Second Page</title>
-</head>
-<body>
-    <h1>Welcome to the Second Page</h1>
-    <p>This is the second page. Click the link below to go back to the main page.</p>
-    <a href="index.html">Go to Main Page</a>
 </body>
 </html>
